--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Quan ly thu vien - backend",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node src/index.js",
+    "start": "node src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "production": "cross-env NODE_ENV=production node src/index.js"
+    "build": "echo 'No build step required'"
   },
   "author": "Nhom 76",
   "license": "ISC",
