--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Quan ly thu vien - backend",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "NODE_ENV=production node src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
     "build": "echo 'No build step required'"
   },
